[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nats = { version = "0.23", default-features = false }

# Solana deps pinned to 1.16.25
solana-geyser-plugin-interface = "=1.16.25"
solana-logger = "=1.16.25"
solana-sdk = "=1.16.25"

# Pin zeroize to an older version that satisfies both
zeroize = "=1.3.0"

[patch.crates-io]
zeroize = "=1.3.0"