[package]
name = "solana-geyser-plugin-nats"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

[lib]
name = "geyser_nats"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ✅ Downgrade to nats 0.16 to avoid zeroize conflicts
nats = { version = "0.16", default-features = false }

# ✅ Solana deps pinned to your validator version
solana-geyser-plugin-interface = "=1.16.25"
solana-logger = "=1.16.25"
solana-sdk = "=1.16.25"

# ✅ Compatible zeroize version
zeroize = "=1.3.0"